--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings 配置站点
-title: 'your awesome title'
+title: 'Aha'
 description: 'your web description'
 keywords: 'your web keywords, another keywords'
 url: 'https://abc.github.io' # your host
@@ -16,7 +16,7 @@ nav: # 最佳体验 六个标签 且最好每个标签不超过4中文字
 author: true
 name: 'your awesome name'
 NickName: 'your awesome nickname'
-webtitle: 'your awesome webtitle'
+webtitle: 'println "Hello friend!"'
 bio: 'your awesome bio'
 about: true
 aboutyou: 'your introduction'
