--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ webtitle: 'println "Hello friend!"'
 bio: 'your awesome bio'
 about: true
 aboutyou: 'your introduction'
-portraits: '/assets/profile.jpeg' # your portraits image file path
+portraits: '/assets/profile.png' # your portraits image file path
 
 # SNS
 SNS: true
