--- a/_config.yml
+++ b/_config.yml
@@ -87,4 +87,4 @@ google: false
 google-ID: ''
 
 # 博客头信息备选颜色（该部分在站点中不充当站点变量，将其写在post的头信息中用来充当页面变量）
-color: rgb(154,133,255) rgb(255,90,90) rgb(255,210,32) rgb(98,170,255)
+color: rgb(179,102,108) rgb(198,138,116) rgb(230,203,147) rgb(168,188,145) rgb(174,144,171)
